--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
 	],
 	"version": "0.0.1",
 	"require": {
-		"composer-plugin-api": "*"
 	},
 	"require-dev": {
-		"composer/composer": "1.*"
+		"composer/composer": "1.*",
+		"composer-plugin-api": "*"
 	},
 	"autoload": {
 		"psr-0": {"Atomita": ["src/"]}
