--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
 		}
 	],
 	"version": "0.0.1",
+	"require": {
+		"composer-plugin-api": "1.0.0"
+	},
 	"autoload": {
 		"psr-0": {"Atomita": ["src/"]}
 	},
